# Raytracing-project

./: CMakeLists.txt  README.md  raytracing in a weekend.sln
Debug/: raytracing in a weekend.ilk
Release/: picture.ppm  raytracing in a weekend.iobj  raytracing in a weekend.ipdb
raytracing in a weekend/: Camera.h  HitAble.h  Main.cpp  Material.h  aabb.h  aarect.h  box.h  bvh.h  constant_medium.h  hitable_list.h  moving_sphere.h  noise.h  picture.ppm  ray.h  raytracing in a weekend.vcxproj  raytracing in a weekend.vcxproj.filters  rnd.h  sphere.h  stb_image.h  texture.h  translate.h  vec3.h  volume.h
raytracing in a weekend/Debug/: vc141.idb
raytracing in a weekend/Debug/raytraci.53FA6672.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  raytracing in a weekend.lastbuildstate
raytracing in a weekend/Release/raytraci.53FA6672.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  raytracing in a weekend.lastbuildstate  raytracing in a weekend.write.1u.tlog
raytracing in a weekend/x64/Release/raytraci.53FA6672.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  raytracing in a weekend.lastbuildstate  raytracing in a weekend.write.1u.tlog
x64/Release/: raytracing in a weekend.iobj  raytracing in a weekend.ipdb
